playground/Drivers/src/generated/ADS1X15Wrapper.rs

/* automatically generated by rust-bindgen 0.59.1 */

pub type ADS1X15Wrapper = *mut ::std::os::raw::c_void;
extern "C" {
    pub fn createADS1X15Wrapper(
        bus: *mut ::std::os::raw::c_void,
        devAddr: ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
    ) -> ADS1X15Wrapper;
}
extern "C" {
    pub fn destroyADS1X15Wrapper(instance: ADS1X15Wrapper);
}
extern "C" {
    pub fn resetADS1X15Wrapper(instance: ADS1X15Wrapper);
}
extern "C" {
    pub fn beginADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn isConnectedADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn setGainADS1X15Wrapper(instance: ADS1X15Wrapper, gain: ::std::os::raw::c_char);
}
extern "C" {
    pub fn getGainADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setModeADS1X15Wrapper(instance: ADS1X15Wrapper, mode: ::std::os::raw::c_char);
}
extern "C" {
    pub fn getModeADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setDataRateADS1X15Wrapper(instance: ADS1X15Wrapper, dataRate: ::std::os::raw::c_char);
}
extern "C" {
    pub fn getDataRateADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn readADCADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        pin: ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn readADCDifferentialADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        positivePin: ::std::os::raw::c_char,
        negativePin: ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn requestADCADS1X15Wrapper(instance: ADS1X15Wrapper, pin: ::std::os::raw::c_char);
}
extern "C" {
    pub fn isBusyADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn isReadyADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn lastRequestADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setComparatorModeADS1X15Wrapper(instance: ADS1X15Wrapper, mode: ::std::os::raw::c_char);
}
extern "C" {
    pub fn getComparatorModeADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setComparatorPolarityADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        polarity: ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn getComparatorPolarityADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setComparatorLatchADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        latch: ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn getComparatorLatchADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setComparatorQueConvertADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        mode: ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn getComparatorQueConvertADS1X15Wrapper(
        instance: ADS1X15Wrapper,
    ) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn setComparatorThresholdLowADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        threshold: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn getComparatorThresholdLowADS1X15Wrapper(
        instance: ADS1X15Wrapper,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn setComparatorThresholdHighADS1X15Wrapper(
        instance: ADS1X15Wrapper,
        threshold: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn getComparatorThresholdHighADS1X15Wrapper(
        instance: ADS1X15Wrapper,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn getErrorADS1X15Wrapper(instance: ADS1X15Wrapper) -> ::std::os::raw::c_char;
}
